--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.lua filter=lfs diff=lfs merge=lfs -text
+*.csproj filter=lfs diff=lfs merge=lfs -text
+*.csdevkit filter=lfs diff=lfs merge=lfs -text
