fixed monitor configuration

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,8 +1,12 @@
+
 #
 # Hyprlock Configuration
 #
 # This configuration uses the Tokyo Night color scheme for a clean and
 # aesthetically pleasing lock screen.
+#
+# This version is generalized to apply to all monitors, making it suitable
+# for sharing with other users.
 #
 
 # --- General Settings ---
@@ -16,7 +20,8 @@ general {
 }
 
 # --- Background Layer ---
-# This layer sets the background color and applies an intensive blur effect.
+# This layer sets the background color and applies an intensive blur effect
+# to all monitors.
 background {
     monitor =                # Apply to all monitors for the background
     path =                   # No image path, using color
@@ -27,9 +32,9 @@ background {
 }
 
 # --- Input Field Layer ---
-# This layer handles the password input field.
+# This layer handles the password input field, centered on all monitors.
 input-field {
-    monitor = HDMI-A-1       # Apply to the specified monitor only
+    monitor =                # Apply to all monitors
     size = 250, 60           # Width, Height of the input field
     outline_thickness = 3    # Border thickness
     dots_size = 0.3          # Scale of the dots indicating password length
@@ -50,9 +55,9 @@ input-field {
 }
 
 # --- Label Layer (Clock) ---
-# This layer displays the current time.
+# This layer displays the current time, centered on all monitors.
 label {
-    monitor = HDMI-A-1       # Apply to the specified monitor only
+    monitor =                # Apply to all monitors
     text = cmd[update:1000] date "+%H:%M:%S" # Command to display time
     color = 0xffc8d3f5       # Tokyo Night Foreground
     font_size = 48           # Large font size for visibility
@@ -63,9 +68,9 @@ label {
 }
 
 # --- Label Layer (Date) ---
-# This layer displays the current date.
+# This layer displays the current date, centered on all monitors.
 label {
-    monitor = HDMI-A-1       # Apply to the specified monitor only
+    monitor =                # Apply to all monitors
     text = cmd[update:60000] date "+%A, %d %B" # Command to display date
     color = 0xffa9b1d6       # Tokyo Night Comment/Gray
     font_size = 24           # Smaller font size for date
@@ -76,9 +81,9 @@ label {
 }
 
 # --- Label Layer (User/Hostname - Optional) ---
-# This layer can display user or hostname information. Uncomment if desired.
+# This layer can display user or hostname information, centered on all monitors.
 # label {
-#     monitor = HDMI-A-1
+#     monitor =
 #     text = Hi, $USER@$HOSTNAME!
 #     color = 0xff7dcfff       # Tokyo Night Cyan
 #     font_size = 20
