fixed wallpaper location

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/archuserbtw/.config/hypr/wallpaper.png
-wallpaper = , /home/archuserbtw/.config/hypr/wallpaper.png
+preload = $HOME/.config/hypr/wallpaper.png
+wallpaper = , $HOME/.config/hypr/wallpaper.png
