fixed waybar config

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -2,7 +2,7 @@
     "layer": "top",
     "position": "top",
     "height": 40,
-    "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
+    "modules-left": ["hyprland/workspaces", "hyprland/mode", "hyprland/window"],
     "modules-center": ["clock"],
     "modules-right": ["custom/recorder", "tray", "pulseaudio", "backlight", "temperature", "cpu", "memory", "battery", "network", "custom/powermenu"],
     "sway/mode": {
@@ -14,16 +14,16 @@
         "disable-markup": false,
         "format": "{icon}",
         "format-icons": {
-            "1": "1 <span font='Font Awesome 5 Free 14'></span>",
-            "2": "2 <span font='Font Awesome 5 Free 14'></span>",
-            "3": "3 <span font='Font Awesome 5 Free 14'></span>",
-            "4": "4 <span font='Font Awesome 5 Free 14'></span>",
-            "5": "5 <span font='Font Awesome 5 Free 14'></span>",
-            "6": "6 <span font='Font Awesome 5 Free 14'></span>",
-            "7": "7 <span font='Font Awesome 5 Free 14'></span>",
-            "8": "8 <span font='Font Awesome 5 Free 14'></span>",
-            "9": "9 <span font='Font Awesome 5 Free 14'></span>",
-            "10": "0 <span font='Font Awesome 5 Free 14'></span>"
+            "1": "1 <span font='Font Awesome 5 Free 14'> </span>",
+            "2": "2 <span font='Font Awesome 5 Free 14'> </span>",
+            "3": "3 <span font='Font Awesome 5 Free 14'> </span>",
+            "4": "4 <span font='Font Awesome 5 Free 14'> </span>",
+            "5": "5 <span font='Font Awesome 5 Free 14'> </span>",
+            "6": "6 <span font='Font Awesome 5 Free 14'> </span>",
+            "7": "7 <span font='Font Awesome 5 Free 14'> </span>",
+            "8": "8 <span font='Font Awesome 5 Free 14'> </span>",
+            "9": "9 <span font='Font Awesome 5 Free 14'> </span>",
+            "10": "0 <span font='Font Awesome 5 Free 14'> </span>"
         }
     },
     "tray": {
@@ -41,7 +41,7 @@
     },
     "cpu": {
         "interval": 5,
-        "format": "︁ {}%",
+        "format": "︁  {}%",
         "max-length": 10
     },
     "memory": {
@@ -68,7 +68,7 @@
         "on-click": "killall -s SIGINT wf-recorder"
 	},
     "battery": {
-        "format": "<span font='Font Awesome 5 Free 11'>{icon}</span> {capacity}%{time}",
+        "format": "<span font='Font Awesome 5 Free 11'>{icon}</span>  {capacity}%{time}",
         "format-icons": ["", "", "", "", ""],
         "format-time": " ({H}h{M}m)",
         "format-charging": "<span font='Font Awesome 5 Free'></span>  <span font='Font Awesome 5 Free 11'>{icon}</span>  {capacity}% - {time}",
@@ -84,7 +84,7 @@
         "format": "{icon}",
         "format-alt": "<span font='Font Awesome 5 Free 10'>︁</span> ︁{ipaddr}/{cidr} {icon}",
         "format-alt-click": "click-left",
-        "format-wifi": "<span font='Font Awesome 5 Free 10'></span> {essid} ({signalStrength}%)",
+        "format-wifi": "<span font='Font Awesome 5 Free 10'></span>  {essid} ({signalStrength}%)",
         "format-ethernet": "<span font='Font Awesome 5 Free 10'>︁</span> {ifname}",
         "format-disconnected": "⚠ Disconnected",
         "tooltip": false
