changed the default terminal emulator to ghostty

--- a/config/fuzzel/fuzzel.ini
+++ b/config/fuzzel/fuzzel.ini
@@ -6,3 +6,6 @@ selection=343a55ff
 selection-match=2ac3deff
 selection-text=c0caf5ff
 border=27a1b9ff
+
+[main]
+font=FiraCode Nerd Font Mono:size=12
