--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ source=~/.config/hypr/monitors.conf
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautilus
 $menu = fuzzel --output HDMI-A-1
 
@@ -234,7 +234,7 @@ bind = $mainMod, R, exec, hyprshot -m output -m active --clipboard-only
 bind = $mainMod, A, exec, $menu
 bind = $mainMod SHIFT, V, exec, cliphist list | fuzzel --output HDMI-A-1 --dmenu | cliphist decode | wl-copy
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, Return, exec, kitty -e nvim
+bind = $mainMod, Return, exec, $terminal -e nvim
 bind = $mainMod, N, exec, hyprlock
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
