--- a/packages.conf
+++ b/packages.conf
@@ -2,8 +2,8 @@
 
 # List of packages to install via Pacman (space-separated)
 # These will be installed using 'sudo pacman -S --needed'.
-PACMAN_PACKAGES="hyprland git rsync hyprpicker hyprshot hyprpolkitagent hyprpaper nwg-displays waybar fuzzel cliphist hyprshot kitty ly fish git yazi starship"
+PACMAN_PACKAGES="hyprland git rsync hyprpicker hyprshot hyprpolkitagent hyprpaper nwg-displays waybar fuzzel cliphist hyprshot kitty ly fish git yazi starship ttf-firacode-nerd ttf-font-awesome"
 
 # List of packages to install via an AUR helper (space-separated)
 # These will be installed using your chosen AUR helper (yay or paru).
-AUR_PACKAGES="tty-clock unimatrix ttf-firacode-nerd ttf-font-awesome"
+AUR_PACKAGES="tty-clock unimatrix"
