added hyprpanel and hyprpanel configs

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = $HOME/.config/hypr/wallpaper.png
-wallpaper = , $HOME/.config/hypr/wallpaper.png
+preload = $HOME/.config/hypr/wallpaper-arch.png
+wallpaper = , $HOME/.config/hypr/wallpaper-arch.png
