--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -44,7 +44,8 @@ $menu = fuzzel --output HDMI-A-1
 # Or execute your favorite apps at launch like this:
 
 exec-once = hyprpaper
-exec-once = waybar
+exec-once = hyprpanel
+#exec-once = waybar
 # exec-once = swaync
 exec-once = mako
 exec-once = systemctl --user start hyprpolkitagent
@@ -256,6 +257,11 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 #bind = $mainMod, down, movefocus, d
 bind = $mainMod, J, movefocus, d
+
+bind = $mainMod Alt, h, resizeactive, -50 0
+bind = $mainMod Alt, l, resizeactive, 50 0
+bind = $mainMod Alt, k, resizeactive, 0 -50
+bind = $mainMod Alt, j, resizeactive, 0 50
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
