updated the hyprlock config

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -1,3 +1,6 @@
+Yes, you can absolutely add a round profile picture to your Hyprlock configuration. You'll achieve this by adding another image layer.
+
+Here's how to adjust your configuration to include a round profile photo sourced from $HOME/.config/hypr/sans.jpg:
 
 #
 # Hyprlock Configuration
@@ -12,72 +15,85 @@
 # --- General Settings ---
 general {
     disable_loading_bar = true # Disable the loading bar for a cleaner look
-    grace = 0                  # No grace period, lock immediately
-    no_fade_in = false         # Fade in the lock screen
-    no_fade_out = false        # Fade out when unlocking
-    fade_in_duration = 200     # milliseconds
-    fade_out_duration = 200    # milliseconds
+    grace = 0              # No grace period, lock immediately
+    no_fade_in = false     # Fade in the lock screen
+    no_fade_out = false    # Fade out when unlocking
+    fade_in_duration = 200 # milliseconds
+    fade_out_duration = 200 # milliseconds
 }
 
 # --- Background Layer ---
 # This layer sets the background color and applies an intensive blur effect
 # to all monitors.
 background {
-    monitor =                # Apply to all monitors for the background
-    path =                   # No image path, using color
-    color = 0xff1a1b26       # Tokyo Night Dark Background (full opacity)
-    blur_passes = 5          # Number of blur passes (increased for more intensive blur)
-    blur_size = 10           # Blur radius (increased for more intensive blur)
-    vignette = 0.5           # Add a slight vignette effect
+    monitor =              # Apply to all monitors for the background
+    path =                 # No image path, using color
+    color = 0xff1a1b26     # Tokyo Night Dark Background (full opacity)
+    blur_passes = 5        # Number of blur passes (increased for more intensive blur)
+    blur_size = 10         # Blur radius (increased for more intensive blur)
+    vignette = 0.5         # Add a slight vignette effect
+}
+
+# --- Profile Picture Layer ---
+# This layer displays a round profile picture, sourced from $HOME/.config/hypr/sans.jpg
+# and centered on all monitors.
+image {
+    monitor =              # Apply to all monitors
+    path = $HOME/.config/hypr/sans.jpg # Path to your profile picture
+    size = 120             # Diameter of the round image (e.g., 120 pixels)
+    rounding = -1          # -1 makes the image perfectly round (radius = size / 2)
+    position = 0, 180      # X, Y offset from center (adjust as needed to place above input field)
+    halign = center        # Horizontal alignment
+    valign = center        # Vertical alignment
 }
 
 # --- Input Field Layer ---
 # This layer handles the password input field, centered on all monitors.
 input-field {
-    monitor =                # Apply to all monitors
-    size = 250, 60           # Width, Height of the input field
-    outline_thickness = 3    # Border thickness
-    dots_size = 0.3          # Scale of the dots indicating password length
-    dots_spacing = 0.15      # Spacing between dots
-    dots_center = true       # Center the dots within the field
-    font_size = 20           # Font size for the input text
+    monitor =              # Apply to all monitors
+    size = 250, 60         # Width, Height of the input field
+    outline_thickness = 3  # Border thickness
+    dots_size = 0.3        # Scale of the dots indicating password length
+    dots_spacing = 0.15    # Spacing between dots
+    dots_center = true     # Center the dots within the field
+    font_size = 20         # Font size for the input text
     # Colors for the input field (Tokyo Night Palette)
-    inner_color = 0x333b425b       # Tokyo Night Blue-Gray (with transparency)
-    outer_color = 0xff7aa2f7       # Tokyo Night Blue (border)
-    check_color = 0xff9ece6a       # Tokyo Night Green (correct password)
-    fail_color = 0xffff6d67        # Tokyo Night Red (incorrect password)
-    capslock_color = 0xffe0af68    # Tokyo Night Orange (caps lock active)
-    numlock_color = 0xffbb9af7     # Tokyo Night Purple (num lock active)
-    font_color = 0xffc8d3f5        # Tokyo Night Foreground
-    fade_on_empty = true     # Fade out the input field when empty
-    hide_input = false       # Show input text (dots only)
-    rounding = 10            # Rounded corners
+    inner_color = 0x333b425b        # Tokyo Night Blue-Gray (with transparency)
+    outer_color = 0xff7aa2f7        # Tokyo Night Blue (border)
+    check_color = 0xff9ece6a        # Tokyo Night Green (correct password)
+    fail_color = 0xffff6d67         # Tokyo Night Red (incorrect password)
+    capslock_color = 0xffe0af68     # Tokyo Night Orange (caps lock active)
+    numlock_color = 0xffbb9af7      # Tokyo Night Purple (num lock active)
+    font_color = 0xffc8d3f5         # Tokyo Night Foreground
+    fade_on_empty = true   # Fade out the input field when empty
+    hide_input = false     # Show input text (dots only)
+    rounding = 10          # Rounded corners
 }
 
 # --- Label Layer (Clock) ---
 # This layer displays the current time, centered on all monitors.
 label {
-    monitor =                # Apply to all monitors
+    monitor =              # Apply to all monitors
     text = cmd[update:1000] date "+%H:%M:%S" # Command to display time
-    color = 0xffc8d3f5       # Tokyo Night Foreground
-    font_size = 48           # Large font size for visibility
+    color = 0xffc8d3f5     # Tokyo Night Foreground
+    font_size = 48         # Large font size for visibility
     font_family = sans-serif # Default sans-serif font
-    position = 0, -150       # X, Y offset from center (adjust as needed)
-    halign = center          # Horizontal alignment
-    valign = center          # Vertical alignment
+    position = 0, -150     # X, Y offset from center (adjust as needed)
+    halign = center        # Horizontal alignment
+    valign = center        # Vertical alignment
 }
 
 # --- Label Layer (Date) ---
 # This layer displays the current date, centered on all monitors.
 label {
-    monitor =                # Apply to all monitors
+    monitor =              # Apply to all monitors
     text = cmd[update:60000] date "+%A, %d %B" # Command to display date
-    color = 0xffa9b1d6       # Tokyo Night Comment/Gray
-    font_size = 24           # Smaller font size for date
+    color = 0xffa9b1d6     # Tokyo Night Comment/Gray
+    font_size = 24         # Smaller font size for date
     font_family = sans-serif # Default sans-serif font
-    position = 0, -90        # X, Y offset from center (adjust as needed)
-    halign = center          # Horizontal alignment
-    valign = center          # Vertical alignment
+    position = 0, -90      # X, Y offset from center (adjust as needed)
+    halign = center        # Horizontal alignment
+    valign = center        # Vertical alignment
 }
 
 # --- Label Layer (User/Hostname - Optional) ---
@@ -85,7 +101,7 @@ label {
 # label {
 #     monitor =
 #     text = Hi, $USER@$HOSTNAME!
-#     color = 0xff7dcfff       # Tokyo Night Cyan
+#     color = 0xff7dcfff        # Tokyo Night Cyan
 #     font_size = 20
 #     font_family = sans-serif
 #     position = 0, 90
