something from the last few commits

--- a/packages.conf
+++ b/packages.conf
@@ -6,4 +6,4 @@ PACMAN_PACKAGES="hyprland git rsync hyprpicker hyprshot hyprpolkitagent hyprpape
 
 # List of packages to install via an AUR helper (space-separated)
 # These will be installed using your chosen AUR helper (yay or paru).
-AUR_PACKAGES="tty-clock unimatrix"
+AUR_PACKAGES="tty-clock unimatrix ags-hyprpanel-git"
