--- a/packages.conf
+++ b/packages.conf
@@ -2,7 +2,7 @@
 
 # List of packages to install via Pacman (space-separated)
 # These will be installed using 'sudo pacman -S --needed'.
-PACMAN_PACKAGES="hyprland git rsync hyprpicker hyprshot hyprpolkitagent hyprpaper nwg-displays waybar fuzzel cliphist hyprshot kitty ly fish git yazi starship ttf-firacode-nerd ttf-font-awesome ghostty"
+PACMAN_PACKAGES="hyprland git rsync hyprpicker hyprshot hyprpolkitagent hyprpaper nwg-displays waybar fuzzel cliphist hyprshot kitty ly fish git yazi starship ttf-firacode-nerd ttf-font-awesome ghostty neovim brightnessctl swww hyprlock firefox nautilus"
 
 # List of packages to install via an AUR helper (space-separated)
 # These will be installed using your chosen AUR helper (yay or paru).
